force-app/main/default/objects/API_Gateway__mdt/API_Gateway__mdt.object-meta.xml
<CustomObject>
    <label>API Gateway</label>
    <pluralLabel>API Gateways</pluralLabel>
</CustomObject>