force-app/main/default/objects/API_Gateway__mdt/fields/is_Compressed__c.field-meta.xml
<CustomField>
    <fullName>is_Compressed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Compressed</label>
    <type>Checkbox</type>
</CustomField>