force-app/main/default/objects/API_Gateway__mdt/fields/is_Custom_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>is_Custom_Endpoint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Custom Endpoint</label>
    <type>Checkbox</type>
</CustomField>