force-app/main/default/objects/API_Gateway__mdt/fields/is_Production__c.field-meta.xml
<CustomField>
    <fullName>is_Production__c</fullName>
    <defaultValue>true</defaultValue>
    <label>is Production</label>
    <type>Checkbox</type>
</CustomField>