force-app/main/default/objects/API_Gateway__mdt/listViews/API.listView-meta.xml
<ListView>
    <fullName>API</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Active__c</columns>
    <columns>Endpoint__c</columns>
    <columns>is_Compressed__c</columns>
    <columns>is_Custom_Endpoint__c</columns>
    <columns>is_Production__c</columns>
    <columns>Method__c</columns>
    <columns>Named_Credential__c</columns>
    <columns>Timeout__c</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <label>API</label>
</ListView>